# app_for_working_with_vacancies

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_hh_py.html  z_145eef247bfb46b6_base_classes_py.html  z_145eef247bfb46b6_main_utils_py.html  z_145eef247bfb46b6_object_utils_py.html  z_145eef247bfb46b6_train_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancies_py.html  z_145eef247bfb46b6_vacancy_worker_py.html
src/: api_hh.py  base_classes.py  main_utils.py  object_utils.py  utils.py  vacancies.py  vacancy_worker.py
tests/: conftest.py  test_api_hh.py  test_base_classes.py  test_main_utils.py  test_utils.py  test_vacancies.py  test_vacancy_worker.py
